Fixed Carswip preview overlay on mobile

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -98,9 +98,9 @@
         margin-right: 0;
     }
 
+    #carswipOverlay,
     #spotFestivalOverlay,
     #whileYouWaitOverlay,
-    #mConsultOverlay,
     #forzaHubMobileOverlay,
     #ligaBBVARedesignOverlay,
     #cartabaseOverlay {
